# stateset-starks

./: .gitignore  CHANGELOG.md  COMMERCE_90_DAY_ROADMAP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATESET_STARK_PRD.md  WHITEPAPER.md  rust-toolchain.toml  whitepaper.html
.autoresearch/: REPORT.md  results.tsv  session.json
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: stark_bench.rs
crates/ves-stark-air/: Cargo.toml  README.md
crates/ves-stark-air/src/: compliance.rs  lib.rs  options.rs  policy.rs  range_check.rs  rescue_air.rs  trace.rs
crates/ves-stark-air/src/policies/: aml_threshold.rs  mod.rs  order_total_cap.rs
crates/ves-stark-batch/: Cargo.toml  README.md
crates/ves-stark-batch/benches/: batch_verify.rs
crates/ves-stark-batch/src/: error.rs  json_num.rs  lib.rs  public_inputs.rs  serialization.rs
crates/ves-stark-batch/src/air/: batch_air.rs  mod.rs  trace_layout.rs
crates/ves-stark-batch/src/air/constraints/: accumulator.rs  compliance_binding.rs  event.rs  leaf_binding.rs  leaf_hash.rs  merkle.rs  mod.rs  state_transition.rs
crates/ves-stark-batch/src/prover/: batch_prover.rs  batch_trace.rs  mod.rs  witness.rs
crates/ves-stark-batch/src/state/: merkle.rs  metadata.rs  mod.rs  root.rs
crates/ves-stark-batch/src/verifier/: batch_verifier.rs  mod.rs
crates/ves-stark-cli/: Cargo.toml  README.md
crates/ves-stark-cli/src/: main.rs
crates/ves-stark-client/: Cargo.toml  README.md
crates/ves-stark-client/src/: batch_integration.rs  client.rs  error.rs  lib.rs  set_chain.rs  types.rs
crates/ves-stark-nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  ves-stark.linux-x64-gnu.node
crates/ves-stark-nodejs/src/: lib.rs
crates/ves-stark-nodejs/test/: test.js
crates/ves-stark-primitives/: Cargo.toml  README.md
crates/ves-stark-primitives/src/: commerce_intent.rs  field.rs  hash.rs  lib.rs  public_inputs.rs  rescue.rs
crates/ves-stark-prover/: Cargo.toml  README.md
crates/ves-stark-prover/src/: budget.rs  error.rs  lib.rs  policy.rs  prover.rs  serialization.rs  trace.rs  witness.rs
crates/ves-stark-python/: Cargo.toml  README.md  pyproject.toml
crates/ves-stark-python/src/: lib.rs
crates/ves-stark-python/tests/: test_smoke.py
crates/ves-stark-verifier/: Cargo.toml  README.md
crates/ves-stark-verifier/src/: error.rs  lib.rs  verify.rs
crates/ves-stark-wasm/: .gitignore  Cargo.toml  README.md
crates/ves-stark-wasm/src/: lib.rs
crates/ves-stark-zig/: Cargo.toml  README.md  build.zig  build.zig.zon
crates/ves-stark-zig/include/: ves_stark.h
crates/ves-stark-zig/src/: lib.rs
crates/ves-stark-zig/zig/: batch.zig  bundle.zig  example.zig  sequencer.zig  ves_stark.zig
docs/: RESCUE_CONSTANTS.md  SOUNDNESS.md  THREAT_MODEL.md  VERIFICATION.md  rescue_constants.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_batch_proof.rs  fuzz_proof_deserialization.rs  fuzz_public_inputs.rs  fuzz_rescue_hash.rs  fuzz_witness_validation.rs
scripts/: rescue_constants.py
src/: lib.rs
target-cargo/: .rustc_info.json
tests/: adversarial_test.rs  batch_integration_test.rs  integration_test.rs  property_test.rs  verification_matrix_test.rs
