[package]
name = "ves-stark-batch"
version.workspace = true
edition = "2021"
rust-version = "1.90"
description = "Batch state transition proofs for VES compliance"
license = "MIT"

[dependencies]
# Internal dependencies
ves-stark-primitives = { version = "0.3.4", path = "../ves-stark-primitives" }
ves-stark-air = { version = "0.3.4", path = "../ves-stark-air" }
ves-stark-prover = { version = "0.3.4", path = "../ves-stark-prover" }
ves-stark-verifier = { version = "0.3.4", path = "../ves-stark-verifier" }

# Winterfell STARK
winter-air = "0.10"
winter-prover = "0.10"
winter-verifier = "0.10"
winter-math = "0.10"
winter-crypto = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Utilities
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rayon = "1.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
uuid = { version = "1.0", features = ["v4"] }
winter-verifier = "0.10"
ves-stark-air = { version = "0.3.4", path = "../ves-stark-air" }

[[bench]]
name = "batch_verify"
harness = false
