[package]
name = "ves-stark-client"
version = "0.1.0"
edition = "2021"
description = "HTTP client for submitting VES STARK proofs to the StateSet sequencer"
license = "MIT OR Apache-2.0"

[features]
default = []
batch = ["ves-stark-batch"]

[dependencies]
ves-stark-primitives = { path = "../ves-stark-primitives" }
ves-stark-prover = { path = "../ves-stark-prover" }
ves-stark-verifier = { path = "../ves-stark-verifier" }
ves-stark-air = { path = "../ves-stark-air" }
ves-stark-batch = { path = "../ves-stark-batch", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ves-stark-batch = { path = "../ves-stark-batch" }
