[package]
name = "ves-stark-client"
version.workspace = true
edition = "2021"
rust-version = "1.90"
description = "HTTP client for submitting VES STARK proofs to the StateSet sequencer"
license = "MIT OR Apache-2.0"

[features]
default = []
batch = ["ves-stark-batch"]
dev = []

[dependencies]
ves-stark-primitives = { version = "0.3.2", path = "../ves-stark-primitives" }
ves-stark-prover = { version = "0.3.2", path = "../ves-stark-prover" }
ves-stark-verifier = { version = "0.3.2", path = "../ves-stark-verifier" }
ves-stark-air = { version = "0.3.2", path = "../ves-stark-air" }
ves-stark-batch = { version = "0.3.2", path = "../ves-stark-batch", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
hex = "0.4"
zeroize = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ves-stark-batch = { version = "0.3.2", path = "../ves-stark-batch" }
