[package]
name = "ves-stark-nodejs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Node.js bindings for VES STARK proof system"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"

# Workspace crates
ves-stark-primitives = { version = "0.2.3", path = "../ves-stark-primitives" }
ves-stark-air = { version = "0.2.3", path = "../ves-stark-air" }
ves-stark-prover = { version = "0.2.3", path = "../ves-stark-prover" }
ves-stark-verifier = { version = "0.2.3", path = "../ves-stark-verifier" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID handling
uuid = { workspace = true }

[build-dependencies]
napi-build = "2"
