[package]
name = "ves-stark-primitives"
description = "Cryptographic primitives for VES STARK proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
winter-math = { workspace = true }
winter-crypto = { workspace = true }
winter-utils = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
