[package]
name = "ves-stark-prover"
description = "STARK proof generation for VES compliance proofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ves-stark-primitives = { path = "../ves-stark-primitives" }
ves-stark-air = { path = "../ves-stark-air" }
winter-prover = { workspace = true }
winter-air = { workspace = true }
winter-math = { workspace = true }
winter-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
