[package]
name = "ves-stark-prover"
description = "STARK proof generation for VES compliance proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ves-stark-primitives = { version = "0.3.4", path = "../ves-stark-primitives" }
ves-stark-air = { version = "0.3.4", path = "../ves-stark-air" }
winter-prover = { workspace = true }
winter-air = { workspace = true }
winter-math = { workspace = true }
winter-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.91"
