[package]
name = "ves-stark-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for VES STARK proof system"

[lib]
name = "ves_stark"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.24.1", features = ["extension-module"] }

# Workspace crates
ves-stark-primitives = { version = "0.3.2", path = "../ves-stark-primitives" }
ves-stark-air = { version = "0.3.2", path = "../ves-stark-air" }
ves-stark-prover = { version = "0.3.2", path = "../ves-stark-prover" }
ves-stark-verifier = { version = "0.3.2", path = "../ves-stark-verifier" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID handling
uuid = { workspace = true }
