[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ves-stark"
version = "0.2.0"
description = "Python bindings for VES STARK proof system"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "StateSet Engineering", email = "engineering@stateset.io" }
]
keywords = ["stark", "zkp", "zero-knowledge", "compliance", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7,<9"]

[project.urls]
Homepage = "https://github.com/stateset/stateset-stark"
Repository = "https://github.com/stateset/stateset-stark"
Documentation = "https://github.com/stateset/stateset-stark#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ves_stark"

[tool.pytest.ini_options]
testpaths = ["tests"]
