[package]
name = "ves-stark-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly bindings for the VES STARK proof system"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.91"
wasm-bindgen = "0.2.106"

serde_json = { workspace = true }
uuid = { workspace = true }

ves-stark-air = { version = "0.3.0", path = "../ves-stark-air" }
ves-stark-primitives = { version = "0.3.0", path = "../ves-stark-primitives" }
ves-stark-prover = { version = "0.3.0", path = "../ves-stark-prover" }
ves-stark-verifier = { version = "0.3.0", path = "../ves-stark-verifier" }
