[package]
name = "ves-stark-zig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "C FFI bindings for VES STARK proof system (used by Zig client)"

[lib]
name = "ves_stark_ffi"
crate-type = ["staticlib", "cdylib"]

[features]
default = []
batch = ["ves-stark-batch"]

[dependencies]
# Workspace crates
ves-stark-primitives = { path = "../ves-stark-primitives" }
ves-stark-air = { path = "../ves-stark-air" }
ves-stark-prover = { path = "../ves-stark-prover" }
ves-stark-verifier = { path = "../ves-stark-verifier" }
ves-stark-batch = { path = "../ves-stark-batch", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID handling
uuid = { workspace = true }
